--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
 		    <artifactId>opencv</artifactId>
 		    <version>4.9.0-0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
